--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    @apply antialiased;
+    @apply text-slate-700;
+  }
+}
